fix: Dracula red text and names in warning highlights low contrast

--- a/scss/themes/chat/dracula.scss
+++ b/scss/themes/chat/dracula.scss
@@ -109,6 +109,8 @@ $genders: (
 
   .pinkText,
   .pinkNameText,
+  .redText,
+  .redNameText,
   .gender-female {
     color: #5f0237;
   }
